# snowlib

./: .gitignore  .pyrightignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  tox.ini
docs/: Demo.ipynb  developer-guide.md
licenses/: THIRD_PARTY.md
src/snowlib/: __init__.py  context.py  session.py  sqlalchemy.py
src/snowlib/_data/: connections.toml.example  test_config.toml.example
src/snowlib/config/: __init__.py  config.py  paths.py
src/snowlib/connection/: __init__.py  base.py  connection.py  paths.py  profiles.py
src/snowlib/io/: __init__.py  names.py  read.py  write.py
src/snowlib/models/: __init__.py  column.py  database.py  schema.py  stage.py
src/snowlib/models/base/: __init__.py  core.py  fqn.py  schema_child.py  show.py
src/snowlib/models/table/: __init__.py  base.py  dynamic_table.py  materialized_view.py  table.py  view.py
src/snowlib/primitives/: __init__.py  async_query.py  context.py  data.py  execute.py  execution.py  job.py  metadata.py  result.py  streaming.py
src/snowlib/utils/: identifiers.py  json_columns.py  query.py  schema.py
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py  test_io_integration.py  test_models_integration.py  test_primitives_integration.py  test_snowpark_integration.py  test_sqlalchemy_integration.py
tests/unit/: test_config.py  test_connection.py  test_context.py  test_fqn.py  test_io_names.py  test_json_columns.py  test_model_validation.py  test_models.py  test_primitives_execution.py  test_query_job.py  test_query_result.py  test_quoted_identifier_warnings.py  test_session.py
