[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snowlib"
dynamic = ["version"]
description = "Python-Snowflake utilities"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE", "licenses/THIRD_PARTY.md"]
requires-python = ">=3.9"
authors = [{name = "Rashad Aziz"}]
maintainers = [{name = "Rashad Aziz"}]
keywords = ["snowflake"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "snowflake-connector-python[pandas]>=3.17.0; python_version < '3.14'",
    "snowflake-connector-python>=3.17.0; python_version >= '3.14'",
    "pandas",
    "tomli>=2.0.0; python_version < '3.11'",
    "pyyaml",
    "keyring",
    "cryptography",
    "pydantic>=2.0",
    "importlib_resources>=1.3; python_version < '3.9'",
]

[project.urls]
Homepage = "https://github.com/rashtastic/snowlib"
Documentation = "https://github.com/rashtastic/snowlib"
Repository = "https://github.com/rashtastic/snowlib.git"
"Bug Tracker" = "https://github.com/rashtastic/snowlib/issues"

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=2.0",
    "snowflake-sqlalchemy>=1.6.0",
]
snowpark = [
    "snowflake-connector-python[pandas]<4.0.0,>=3.17.0; python_version < '3.14'",
    "snowflake-connector-python<4.0.0,>=3.17.0; python_version >= '3.14'",
    "snowflake-snowpark-python[modin]>=1.9.0; python_version < '3.14'",  # Snowpark requires python_version<3.14
]
excel = [
    "xlrd",
    "xlsxwriter",
    "openpyxl",
    "html5lib",
]
dev = [
    # Testing
    "pytest",
    "pytest-xdist",
    "mypy",
    "pyright",
    "types-pyyaml",
    "pandas-stubs",
    "ipykernel",
    "tox",
    # Distribution
    "pip-licenses",
    # All optional dependencies
    "snowlib[sqlalchemy,snowpark,excel]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["snowlib*"]

[tool.setuptools.package-data]
snowlib = ["_data/*.example"]

[tool.setuptools.dynamic]
version = {attr = "snowlib.__version__"}

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
